generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ─── USERS & AUTH ─────────────────────────────────────────────────────────────

model User {
  id        Int      @id @default(autoincrement())
  name      String
  email     String   @unique
  password  String
  phone     String?
  avatar    String?
  role      String   @default("user") // user | admin | donor
  isVisible Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  blogs     Blog[]
  orders    Order[]
  carts     Cart[]
  donations Donation[]

  @@map("users")
}

// ─── EMPLOYEES (team section display only) ────────────────────────────────────

model Employee {
  id        Int      @id @default(autoincrement())
  name      String
  role      String
  avatar    String?
  bio       String?
  order     Int?
  isVisible Boolean  @default(true)
  createdAt DateTime @default(now())

  @@map("employees")
}

// ─── CATEGORIES ───────────────────────────────────────────────────────────────

model Category {
  id        Int       @id @default(autoincrement())
  name      String
  type      String    // product | blog
  isVisible Boolean   @default(true)

  products  Product[]
  blogs     Blog[]

  @@map("categories")
}

// ─── PRODUCTS ─────────────────────────────────────────────────────────────────

model Product {
  id          Int            @id @default(autoincrement())
  name        String
  description String?
  price       Decimal        @db.Decimal(10, 2)
  stock       Int            @default(0)
  status      String         @default("in_stock") // in_stock | low_stock | out_stock
  isVisible   Boolean        @default(true)
  categoryId  Int?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt

  category    Category?      @relation(fields: [categoryId], references: [id])
  images      ProductImage[]
  cartItems   CartItem[]
  orderItems  OrderItem[]

  @@map("products")
}

model ProductImage {
  id        Int     @id @default(autoincrement())
  productId Int
  url       String
  isPrimary Boolean @default(false)

  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@map("product_images")
}

// ─── CART ─────────────────────────────────────────────────────────────────────

model Cart {
  id        Int        @id @default(autoincrement())
  userId    Int
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     CartItem[]

  @@map("carts")
}

model CartItem {
  id        Int     @id @default(autoincrement())
  cartId    Int
  productId Int
  quantity  Int     @default(1)

  cart      Cart    @relation(fields: [cartId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id])

  @@map("cart_items")
}

// ─── ORDERS ───────────────────────────────────────────────────────────────────

model Order {
  id              Int         @id @default(autoincrement())
  userId          Int
  status          String      @default("pending") // pending | confirmed | processing | completed | cancelled | refunded
  total           Decimal     @db.Decimal(10, 2)
  shippingAddress String?
  notes           String?
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  user            User        @relation(fields: [userId], references: [id])
  items           OrderItem[]

  @@map("orders")
}

model OrderItem {
  id        Int     @id @default(autoincrement())
  orderId   Int
  productId Int
  quantity  Int
  unitPrice Decimal @db.Decimal(10, 2) // price snapshot at time of order

  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product @relation(fields: [productId], references: [id])

  @@map("order_items")
}

// ─── BLOGS ────────────────────────────────────────────────────────────────────

model Blog {
  id          Int       @id @default(autoincrement())
  title       String
  slug        String    @unique
  content     String
  excerpt     String?
  coverImage  String?
  authorId    Int?
  categoryId  Int?
  status      String    @default("draft") // draft | published
  isVisible   Boolean   @default(true)
  publishedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  author      User?     @relation(fields: [authorId], references: [id])
  category    Category? @relation(fields: [categoryId], references: [id])

  @@map("blogs")
}

// ─── DONATIONS ────────────────────────────────────────────────────────────────

model Donation {
  id         Int      @id @default(autoincrement())
  donorName  String
  email      String
  amount     Decimal  @db.Decimal(10, 2)
  currency   String   @default("RWF")
  message    String?
  userId     Int?     // nullable — guest donations allowed
  status     String   @default("pending") // pending | completed | failed | refunded
  paymentRef String?
  createdAt  DateTime @default(now())

  user       User?    @relation(fields: [userId], references: [id])

  @@map("donations")
}

// ─── PARTNERS ─────────────────────────────────────────────────────────────────

model Partner {
  id           Int      @id @default(autoincrement())
  name         String
  logo         String?
  website      String?
  description  String?
  contactName  String?
  contactEmail String?
  isVisible    Boolean  @default(true)
  createdAt    DateTime @default(now())

  @@map("partners")
}

// ─── TESTIMONIALS ─────────────────────────────────────────────────────────────

model Testimonial {
  id        Int      @id @default(autoincrement())
  name      String
  role      String?
  company   String?
  avatar    String?
  quote     String
  rating    Int      @default(5)
  isVisible Boolean  @default(true)
  createdAt DateTime @default(now())

  @@map("testimonials")
}

// ─── MESSAGES (contact form) ──────────────────────────────────────────────────

model Message {
  id               Int      @id @default(autoincrement())
  fullName         String
  email            String
  phone            String?
  organizationType String?
  message          String
  isRead           Boolean  @default(false)
  createdAt        DateTime @default(now())

  @@map("messages")
}
