// Geuza — Database Diagram
// https://dbdiagram.io

// ─── USERS & AUTH ─────────────────────────────────────────────────────────────

Table users {
  id          int        [pk, increment]
  name        varchar    [not null]
  email       varchar    [unique, not null]
  password    varchar    [not null]
  phone       varchar
  avatar      varchar
  role        varchar    [not null, default: 'user', note: 'user | admin | donor']
  is_visible  boolean    [not null, default: true, note: 'soft disable account without deleting']
  created_at  timestamp  [default: `now()`]
  updated_at  timestamp
}

// ─── EMPLOYEES (team section display only — no system access) ────────────────

Table employees {
  id          int        [pk, increment]
  name        varchar    [not null]
  role        varchar    [not null, note: 'Co-Founder, Manager, etc.']
  avatar      varchar
  bio         text
  order       int        [note: 'display order on team section']
  is_visible  boolean    [not null, default: true]
  created_at  timestamp  [default: `now()`]
}

// ─── CATEGORIES (shared between products & blogs) ─────────────────────────────

Table categories {
  id          int      [pk, increment]
  name        varchar  [not null]
  type        varchar  [not null, note: 'product | blog']
  is_visible  boolean  [not null, default: true]
}

// ─── PRODUCTS ─────────────────────────────────────────────────────────────────

Table products {
  id           int        [pk, increment]
  name         varchar    [not null]
  description  text
  price        decimal    [not null]
  stock        int        [not null, default: 0]
  status       varchar    [not null, default: 'in_stock', note: 'in_stock | low_stock | out_stock']
  category_id  int        [ref: > categories.id]
  is_visible   boolean    [not null, default: true, note: 'hide from shop without deleting']
  created_at   timestamp  [default: `now()`]
  updated_at   timestamp
}

Table product_images {
  id          int      [pk, increment]
  product_id  int      [not null, ref: > products.id]
  url         varchar  [not null]
  is_primary  boolean  [default: false]
}

// ─── CART ─────────────────────────────────────────────────────────────────────

Table carts {
  id         int        [pk, increment]
  user_id    int        [not null, ref: > users.id]
  created_at timestamp  [default: `now()`]
  updated_at timestamp
}

Table cart_items {
  id          int  [pk, increment]
  cart_id     int  [not null, ref: > carts.id]
  product_id  int  [not null, ref: > products.id]
  quantity    int  [not null, default: 1]
}

// ─── ORDERS ───────────────────────────────────────────────────────────────────

Table orders {
  id               int        [pk, increment]
  user_id          int        [not null, ref: > users.id]
  status           varchar    [not null, default: 'pending', note: 'pending | confirmed | processing | completed | cancelled | refunded']
  total            decimal    [not null]
  shipping_address text
  notes            text
  created_at       timestamp  [default: `now()`]
  updated_at       timestamp
}

Table order_items {
  id          int      [pk, increment]
  order_id    int      [not null, ref: > orders.id]
  product_id  int      [not null, ref: > products.id]
  quantity    int      [not null]
  unit_price  decimal  [not null, note: 'snapshot of price at time of order']
}

// ─── BLOGS ────────────────────────────────────────────────────────────────────

Table blogs {
  id           int        [pk, increment]
  title        varchar    [not null]
  slug         varchar    [unique, not null]
  content      text       [not null]
  excerpt      text
  cover_image  varchar
  author_id    int        [ref: > users.id]
  category_id  int        [ref: > categories.id]
  status       varchar    [not null, default: 'draft', note: 'draft | published']
  is_visible   boolean    [not null, default: true, note: 'temporarily hide a published post']
  published_at timestamp
  created_at   timestamp  [default: `now()`]
  updated_at   timestamp
}

// ─── DONATIONS ────────────────────────────────────────────────────────────────

Table donations {
  id           int        [pk, increment]
  donor_name   varchar    [not null]
  email        varchar    [not null]
  amount       decimal    [not null]
  currency     varchar    [not null, default: 'RWF']
  message      text
  user_id      int        [ref: > users.id, note: 'nullable — guest donations allowed']
  status       varchar    [not null, default: 'pending', note: 'pending | completed | failed | refunded']
  payment_ref  varchar    [note: 'payment gateway reference']
  created_at   timestamp  [default: `now()`]
}

// ─── PARTNERS ─────────────────────────────────────────────────────────────────

Table partners {
  id             int        [pk, increment]
  name           varchar    [not null]
  logo           varchar
  website        varchar
  description    text
  contact_name   varchar
  contact_email  varchar
  is_visible     boolean    [not null, default: true]
  created_at     timestamp  [default: `now()`]
}

// ─── TESTIMONIALS ─────────────────────────────────────────────────────────────

Table testimonials {
  id          int        [pk, increment]
  name        varchar    [not null]
  role        varchar
  company     varchar
  avatar      varchar
  quote       text       [not null]
  rating      int        [default: 5, note: '1–5']
  is_visible  boolean    [not null, default: true]
  created_at  timestamp  [default: `now()`]
}

// ─── MESSAGES (contact form) ──────────────────────────────────────────────────

Table messages {
  id                 int        [pk, increment]
  full_name          varchar    [not null]
  email              varchar    [not null]
  phone              varchar
  organization_type  varchar
  message            text       [not null]
  is_read            boolean    [default: false]
  created_at         timestamp  [default: `now()`]
}
